# kydra

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  KydraVersion.h.in  README.md  debug_policy_https.py  kydra_0.9.0_amd64.deb  reproduce_issue.py  test_local_debs.sh  test_local_detection.cpp  test_local_filter.sh  test_parse_deb.cpp  test_policy_parsing.py  test_virtual_pkg.cpp
build-deb/: CMakeCache.txt  KydraVersion.h  Makefile  cmake_install.cmake  ecm_uninstall.cmake  install_manifest.txt
build-deb/debian/DEBIAN/: control  postinst  prerm
build-deb/debian/usr/share/applications/: org.kydra.app.desktop
build-deb/debian/usr/share/config.kcfg/: muon.kcfg
build-deb/src/: Makefile  MuonSettings.cpp  MuonSettings.moc_parameters  cmake_install.cmake  kydra
build-deb/src/icons/: Makefile  cmake_install.cmake
build-deb/src/kydra_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-deb/src/kydra_autogen/2PTLJEAFFY/: moc_ChangelogTab.cpp  moc_ChangelogTab.cpp.d  moc_DependsTab.cpp.d  moc_DetailsTab.cpp.d  moc_InstalledFilesTab.cpp  moc_InstalledFilesTab.cpp.d  moc_MainTab.cpp  moc_MainTab.cpp.d  moc_TechnicalDetailsTab.cpp.d  moc_VersionTab.cpp.d
build-deb/src/kydra_autogen/4ADVZMRJNH/: moc_HistoryProxyModel.cpp.d  moc_HistoryView.cpp.d
build-deb/src/kydra_autogen/4H5P23O3AD/: moc_DownloadDelegate.cpp  moc_DownloadDelegate.cpp.d  moc_DownloadModel.cpp.d
build-deb/src/kydra_autogen/EWIEGA46WW/: moc_DetailsWidget.cpp  moc_DetailsWidget.cpp.d  moc_DonateDialog.cpp  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ManagerWidget.cpp  moc_ManagerWidget.cpp.d  moc_ReviewWidget.cpp  moc_ReviewWidget.cpp.d  moc_StatusWidget.cpp.d  moc_TransactionWidget.cpp.d
build-deb/src/kydra_autogen/IJHAR2IVER/: moc_GeneralSettingsPage.cpp  moc_GeneralSettingsPage.cpp.d  moc_ManagerSettingsDialog.cpp  moc_ManagerSettingsDialog.cpp.d  moc_RepositorySettingsPage.cpp.d
build-deb/src/kydra_autogen/PPMDID7VGQ/: moc_MuonStrings.cpp  moc_MuonStrings.cpp.d  moc_QAptActions.cpp.d
build-deb/src/kydra_autogen/U6IX2FV6TI/: moc_FilterModel.cpp.d  moc_FilterWidget.cpp  moc_FilterWidget.cpp.d
build-deb/src/kydra_autogen/XJAMFALVOG/: moc_PackageDelegate.cpp  moc_PackageDelegate.cpp.d  moc_PackageModel.cpp.d  moc_PackageProxyModel.cpp.d  moc_PackageView.cpp  moc_PackageView.cpp.d  moc_PackageViewHeader.cpp.d  moc_PackageWidget.cpp.d
build-deb/src/kydra_autogen/YPB6MEUM2W/: moc_SettingsPageBase.cpp.d
build-deb/src/kydra_autogen/include/: DependsTab.moc.d  DetailsWidget.moc.d  FilterWidget.moc.d  GeneralSettingsPage.moc.d  InstalledFilesTab.moc.d  MainTab.moc.d  ManagerSettingsDialog.moc.d  ManagerWidget.moc.d  PackageModel.moc.d  RepositorySettingsPage.moc.d  ReviewWidget.moc.d  SettingsPageBase.moc.d  TechnicalDetailsTab.moc.d  VersionTab.moc.d
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake
build-test/src/: CTestTestfile.cmake  Makefile  MuonSettings.cpp  MuonSettings.h  MuonSettings.moc_parameters  cmake_install.cmake
build-test/src/icons/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/src/kydra_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-test/src/kydra_autogen/2PTLJEAFFY/: moc_DependsTab.cpp  moc_DetailsTab.cpp  moc_TechnicalDetailsTab.cpp  moc_VersionTab.cpp
build-test/src/kydra_autogen/4ADVZMRJNH/: moc_HistoryProxyModel.cpp  moc_HistoryView.cpp
build-test/src/kydra_autogen/4H5P23O3AD/: moc_DownloadModel.cpp
build-test/src/kydra_autogen/EWIEGA46WW/: moc_MainWindow.cpp  moc_StatusWidget.cpp  moc_TransactionWidget.cpp
build-test/src/kydra_autogen/IJHAR2IVER/: moc_GeneralSettingsPage.cpp  moc_RepositorySettingsPage.cpp
build-test/src/kydra_autogen/PPMDID7VGQ/: moc_QAptActions.cpp
build-test/src/kydra_autogen/U6IX2FV6TI/: moc_FilterModel.cpp
build-test/src/kydra_autogen/XJAMFALVOG/: moc_PackageModel.cpp  moc_PackageProxyModel.cpp  moc_PackageViewHeader.cpp  moc_PackageWidget.cpp
build-test/src/kydra_autogen/YPB6MEUM2W/: moc_SettingsPageBase.cpp
data/: kydra.schemas
docs/: ChangeLog  DESIGN_NOTES.md  ICON_SPEC.md  README.md  RELEASE_NOTES.md
local/: BRANDING.md  TODO
packaging/debian/: changelog  control  copyright  install  menu  rules
releases/: kydra_0.9.0_amd64.deb  kydra_0.9.1_amd64.deb  kydra_1.0.0_amd64.deb  kydra_1.1.0_amd64.deb  kydra_1.2.0_amd64.deb  kydra_1.3.1_amd64.deb  kydra_1.3.2_amd64.deb  kydra_1.3.3_amd64.deb  kydra_1.3.4_amd64.deb  kydra_1.4.0_amd64.deb  kydra_1.5.0_amd64.deb  kydra_1.6.0_amd64.deb  kydra_1.7.0_amd64.deb
scripts/: build-deb.sh  build-debug.sh  generate-icons.sh  update-translations.sh
src/: AppStreamHelper.cpp  AppStreamHelper.h  CMakeLists.txt  DetailsWidget.cpp  DonateDialog.cpp  DonateDialog.h  EnhancedDetailsWidget.cpp  EnhancedDetailsWidget.h  KirigamiBackend.cpp  KirigamiBackend.h  MainWindow.cpp  MainWindow.h  ManagerWidget.cpp  ManagerWidget.h  ReviewWidget.cpp  TransactionWidget.cpp  TransactionWidget.h  main.cpp  muonui.rc
src/Dashboard/: DashboardWidget.cpp  DashboardWidget.h
src/DetailsTabs/: DependsTab.cpp  InstalledFilesTab.cpp  MainTab.cpp  TechnicalDetailsTab.cpp  VersionTab.cpp
src/FilterWidget/: CategoryFilter.cpp  FilterWidget.cpp  FilterWidget.h  OriginFilter.cpp  StatusFilter.cpp
src/PackageModel/: FlatpakManager.cpp  FlatpakManager.h  LocalPackageManager.cpp  LocalPackageManager.h  PackageDelegate.cpp  PackageDelegate.h  PackageIconExtractor.cpp  PackageIconExtractor.h  PackageModel.cpp  PackageModel.h  PackageProxyModel.cpp  PackageProxyModel.h  PackageView.cpp  PackageViewHeader.cpp  PackageViewHeader.h  PackageWidget.cpp  PackageWidget.h  VirtualPackage.cpp  VirtualPackage.h
src/config/: GeneralSettingsPage.cpp  GeneralSettingsPage.h  ManagerSettingsDialog.cpp  RepositorySettingsPage.cpp  RepositorySettingsPage.h  muon.kcfg
src/icons/: CMakeLists.txt
src/muonapt/: QAptActions.cpp
src/muonapt/HistoryView/: HistoryDelegate.cpp  HistoryDelegate.h  HistoryView.cpp
src/qml/: KydraKirigami.qml  PackageDetailsPanel.qml
src/settings/: SettingsPageBase.cpp
(+2 files in other folders)
